<resources>
    <string name="app_name">Ausgaben</string>
    <string name="filename_import">expenses.csv</string>
    <string name="pref_city">city</string>
    <string name="pref_country">country</string>
    <string name="pref_forexRates">forexRates</string>
    <string name="pref_location">location</string>
    <string name="pref_toggleRates">toggleRates</string>
    <string name="data_amount">amount</string>
    <string name="data_category">category</string>
    <string name="data_city">city</string>
    <string name="data_country">country</string>
    <string name="data_currency">currency</string>
    <string name="data_date">date</string>
    <string name="data_displayCountry">displayCountry</string>
    <string name="data_displayMonth">displayMonth</string>
    <string name="data_displayStartDate">displayStartDate</string>
    <string name="data_displayEndDate">displayEndDate</string>
    <string name="data_editExpenseId">editExpenseId</string>
    <string name="data_id">id</string>
    <string name="data_imagepath">imagepath</string>
    <string name="data_name">name</string>
    <string name="data_newExpenseId">newExpenseId</string>
    <string name="data_scrollIndex">scrollIndex</string>
    <string name="data_scrollOffset">scrollOffset</string>
    <string name="data_source">source</string>
    <string name="data_isAccommodationVisible">isAccommodationVisible</string>
    <string name="data_isFoodVisible">isFoodVisible</string>
    <string name="data_isGiftsVisible">isGiftsVisible</string>
    <string name="data_isLeisureVisible">isLeisureVisible</string>
    <string name="data_isMiscVisible">isMiscVisible</string>
    <string name="data_isShoppingVisible">isShoppingVisible</string>
    <string name="data_isTravelVisible">isTravelVisible</string>
    <string name="data_isDateEdited">isDateEdited</string>
    <string name="data_isNameEdited">isNameEdited</string>
    <string name="data_isCategoryEdited">isCategoryEdited</string>
    <string name="data_isAmountEdited">isAmountEdited</string>
    <string name="data_isCurrencyEdited">isCurrencyEdited</string>
    <string name="data_isCountryEdited">isCountryEdited</string>
    <string name="data_isImagePathEdited">isImagePathEdited</string>
    <string name="currency_ALL">ALL</string>
    <string name="currency_BAM">BAM</string>
    <string name="currency_BGN">BGN</string>
    <string name="currency_BYN">BYN</string>
    <string name="currency_CHF">CHF</string>
    <string name="currency_CZK">CZK</string>
    <string name="currency_DKK">DKK</string>
    <string name="currency_EUR">EUR</string>
    <string name="currency_GBP">GBP</string>
    <string name="currency_HUF">HUF</string>
    <string name="currency_HRK">HRK</string>
    <string name="currency_MKD">MKD</string>
    <string name="currency_NOK">NOK</string>
    <string name="currency_PLN">PLN</string>
    <string name="currency_RON">RON</string>
    <string name="currency_RSD">RSD</string>
    <string name="currency_SEK">SEK</string>
    <string name="currency_SGD">SGD</string>
    <string name="currency_TRY">TRY</string>
    <string name="currency_ALL_full">ALL (Albanian lek)</string>
    <string name="currency_BAM_full">BAM (BiH convertible mark)</string>
    <string name="currency_BGN_full">BGN (Bulgarian lev)</string>
    <string name="currency_BYN_full">BYN (Belarusian ruble)</string>
    <string name="currency_CHF_full">CHF (Swiss franc)</string>
    <string name="currency_CZK_full">CZK (Czech koruna)</string>
    <string name="currency_DKK_full">DKK (Danish krone)</string>
    <string name="currency_EUR_full">EUR (Euro)</string>
    <string name="currency_GBP_full">GBP (Pound sterling)</string>
    <string name="currency_HUF_full">HUF (Hungarian forint)</string>
    <string name="currency_HRK_full">HRK (Croatian kuna)</string>
    <string name="currency_MKD_full">MKD (Macedonian dinar)</string>
    <string name="currency_NOK_full">NOK (Norwegian krone)</string>
    <string name="currency_PLN_full">PLN (Polish złoty)</string>
    <string name="currency_RON_full">RON (Romanian leu)</string>
    <string name="currency_RSD_full">RSD (Serbian dinar)</string>
    <string name="currency_SEK_full">SEK (Swedish krona)</string>
    <string name="currency_SGD_full">SGD (Singapore dollar)</string>
    <string name="currency_TRY_full">TRY (Turkish lira)</string>
    <string name="currency_ALL_rate">135.95</string>
    <string name="currency_BAM_rate">1.95</string>
    <string name="currency_BGN_rate">1.95</string>
    <string name="currency_BYN_rate">2.08</string>
    <string name="currency_CHF_rate">1.07</string>
    <string name="currency_CZK_rate">27.02</string>
    <string name="currency_DKK_rate">7.44</string>
    <string name="currency_EUR_rate">1.00</string>
    <string name="currency_GBP_rate">0.85</string>
    <string name="currency_HUF_rate">308.00</string>
    <string name="currency_HRK_rate">7.51</string>
    <string name="currency_MKD_rate">61.6</string>
    <string name="currency_NOK_rate">9.08</string>
    <string name="currency_PLN_rate">4.42</string>
    <string name="currency_RON_rate">4.52</string>
    <string name="currency_RSD_rate">123.00</string>
    <string name="currency_SEK_rate">9.58</string>
    <string name="currency_SGD_rate">1.51</string>
    <string name="currency_TRY_rate">3.99</string>
    <string name="str_dollarSign">$</string>
    <string name="str_euroSign">€</string>
    <string name="str_accommodation">Accommodation</string>
    <string name="str_addExpense">Add Expense</string>
    <string name="str_all">All</string>
    <string name="str_amount">Amount</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_category">Category</string>
    <string name="str_country">Country</string>
    <string name="str_city">City</string>
    <string name="str_date">Date</string>
    <string name="str_delete">Delete</string>
    <string name="str_endDate">End Date</string>
    <string name="str_eurTo">EUR to</string>
    <string name="str_expenseActivity">ExpenseActivity</string>
    <string name="str_exportCSV">Export as CSV</string>
    <string name="str_food">Food</string>
    <string name="str_gifts">Gifts</string>
    <string name="str_hideFilters">Hide Filters</string>
    <string name="str_importCSV">Import CSV</string>
    <string name="str_leisure">Leisure</string>
    <string name="str_locationNotFound">Location not found</string>
    <string name="str_misc">Misc</string>
    <string name="str_month">Month</string>
    <string name="str_name">Name</string>
    <string name="str_overview">Overview</string>
    <string name="str_photo">Photo</string>
    <string name="str_rate">Rate</string>
    <string name="str_save">Save</string>
    <string name="str_selectDate">Select Date</string>
    <string name="str_showHide">Show/Hide</string>
    <string name="str_startDate">Start Date</string>
    <string name="str_totalExpenditure">Total Expenditure</string>
    <string name="str_shopping">Shopping</string>
    <string name="str_showFilters">Show Filters</string>
    <string name="str_travel">Travel</string>
    <string name="str_viewExpensesList">View Expenses List</string>
    <string name="msg_changesSaved">Changes saved</string>
    <string name="msg_connFailed">Connection failed</string>
    <string name="msg_connSuspended">Connection suspended</string>
    <string name="msg_dbCleared">Database cleared</string>
    <string name="msg_deleteExpenseConfirmation">Delete this expense?</string>
    <string name="msg_endDateBeforeStartDate">End date cannot be before start date</string>
    <string name="msg_firstStartup">First time startup - setting initial forex rates</string>
    <string name="msg_importSuccessful">Import successful</string>
    <string name="msg_save">Input saved</string>
    <string name="msg_locationChanged">Location changed: </string>
    <string name="msg_missingAmt">Please input a valid amount</string>
    <string name="msg_missingName">Please input an item name</string>
    <string name="msg_resolveConnError">Resolving connection error</string>
    <string name="msg_startDateAfterEndDate">Start date cannot be after end date</string>
    <string name="msg_updatingLocation">Updating location</string>
    <string name="msg_exception_fileNotFound">File not found</string>
    <string name="msg_exception_io">IOException encountered</string>
    <string name="msg_exception_security">SecurityException encountered</string>
    <string-array name="arr_expenseCategory_entries">
        <item>Accommodation</item>
        <item>Food</item>
        <item>Gifts</item>
        <item>Leisure</item>
        <item>Misc</item>
        <item>Shopping</item>
        <item>Travel</item>
    </string-array>
    <string-array name="arr_currency_entries">
        <item>ALL</item>
        <item>BAM</item>
        <item>BGN</item>
        <item>BYN</item>
        <item>CHF</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>MKD</item>
        <item>NOK</item>
        <item>PLN</item>
        <item>RON</item>
        <item>RSD</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>TRY</item>
    </string-array>
    <string-array name="arr_country_entries">
        <item>Albania</item>
        <item>Austria</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Bosnia and Herzegovina</item>
        <item>Bulgaria</item>
        <item>Croatia</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Estonia</item>
        <item>Faroe Islands</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Hungary</item>
        <item>Italy</item>
        <item>Latvia</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia (FYROM)</item>
        <item>Montenegro</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Poland</item>
        <item>Romania</item>
        <item>Serbia</item>
        <item>Singapore</item>
        <item>Slovenia</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Turkey</item>
        <item>United Kingdom</item>
    </string-array>
    <string-array name="arr_month_entries">
        <item>All</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="arr_displayCurrency_entries">
        <item>EUR</item>
        <item>SGD</item>
    </string-array>
    <string-array name="arr_photoClick_entries">
        <item>View photo</item>
        <item>Take new photo</item>
        <item>Remove photo</item>
    </string-array>
    <string-array name="pref_dateEntries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
</resources>